# Elixir

./: .clang-format  .gitignore  .gitmodules  Assets.cmake  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Utils.cmake  vcpkg.json
.cache/clangd/index/: Application.cpp.89C91A0D1587A8E7.idx  Application.h.015422C6D424F4CF.idx  ApplicationEvent.h.7E14675D28E3F615.idx  Color.h.2481D59ACA5031D4.idx  CommandBuffer.cpp.A77E08B4DEF0A215.idx  CommandBuffer.h.281E842A27C8EAEB.idx  Converters.h.D6986601FC7E4AE3.idx  Core.h.FB331AA77688CC51.idx  Dissolve.cpp.0EF305554352F60A.idx  Dissolve.h.B377289E6BDC53FC.idx  Engine.h.83A36E791E6515AF.idx  Entrypoint.h.1218A218CC648D6C.idx  Event.h.9B1B283E927CC0F4.idx  EventFormatter.h.AF273CA516811C79.idx  Executor.cpp.D3F9657DF2A7693D.idx  Executor.h.465847769BCB41CB.idx  FrameProfiler.h.C26C67F55E4AA048.idx  GLFWInput.cpp.DC8BEF79FC20F07C.idx  GLFWInput.h.75870E05F4D59A92.idx  GLFWWindow.cpp.FB705278EA10920C.idx  GLFWWindow.h.89DA64DC8C16FD30.idx  GLSL.std.450.h.C064A51C55A9046C.idx  GraphicsContext.cpp.71BA0A695C0E07FB.idx  GraphicsContext.h.7AFD27358D4E1931.idx  Image.cpp.F62DA8FDBB980048.idx  Image.h.B60FC71897507A0E.idx  Input.h.785FC1BA1679B9F5.idx  InputCodes.h.E2F3B4CF75ECA949.idx  InputManager.cpp.3D2FAD6245624FA5.idx  InputManager.h.66F81D382C1B2436.idx  KeyEvent.h.D1F5D7CF7FE20355.idx  Log.cpp.F6BB256B98F77DA7.idx  Log.h.8A7CD4E3D5DF9071.idx  MouseEvent.h.1E7F6668897604DE.idx  Profiler.h.CE9595CCBD241427.idx  Texture.cpp.F46626066AD254A7.idx  Texture.h.72FA4828FD5C9825.idx  (+428 more)
.github/workflows/: UnitTests.yml
Assets/VFX/: BlendModeTest.json  CinematicFX_Showcase.json  DistortionTest.json  FireAndFireworks.json  FlipbookSmokeTest.json  GradientTest.json  NS_Explosion_01.json  N_RealExp_00_A.json  NormalLightTest.json  RainStorm.json  RibbonGarden.json  RibbonVortex.json
Dissolve/: Dissolve.cmake
Dissolve/Shaders/: FixedTriangle.vs.spirv  GUI.vs.spirv  GUI_Corners.ps.spirv
Dissolve/Source/: Dissolve.cpp  Dissolve.h
Elixir/: .clang-tidy  .gitignore  Elixir.cmake
Elixir/Source/: Engine.h  epch.h
Elixir/Tests/: CMakeLists.txt  Entrypoint.cpp
Elixir/Tests/Engine/Aether/: EffectLoaderTest.cpp  FrameSubmissionTest.cpp  ParticleResourcePoolTest.cpp  SystemInstanceTest.cpp  SystemTest.cpp
Elixir/Tests/Engine/Core/: HandleTest.cpp  MallocTest.cpp  MemoryTest.cpp  MockMalloc.h  UUIDTest.cpp
Elixir/Tests/Engine/GUI/: DirtyTrackingTest.cpp  DrawCacheTest.cpp  ForEachChildTest.cpp  InvalidationTest.cpp  ManagerTestUtils.h  RenderBatchTest.cpp  RenderGateTest.cpp  VisitChildrenTest.cpp  WidgetLifetimeTest.cpp  WidgetTestUtils.h
Elixir/Tests/Engine/Graphics/: BufferTest.cpp  ImageTest.cpp  MaterialCompileManagerTest.cpp  MaterialDomainTest.cpp  MaterialDrawCommandCacheTest.cpp  MaterialGPUParameterCacheTest.cpp  MaterialGraphTest.cpp  MaterialIRTest.cpp  MaterialRenderProxyTest.cpp  MaterialShaderMapTest.cpp  MaterialShaderPermutationTest.cpp  MaterialTest.cpp  MeshPassProcessorTest.cpp  MeshRenderSceneTest.cpp  ModelRenderHandleTest.cpp
Elixir/Tests/Engine/Renderer/: RenderGraphTest.cpp
Elixir/Tests/Graphics/Vulkan/: ConvertersTest.cpp  InitializersTest.cpp  VulkanBufferTest.cpp  VulkanImageTest.cpp
Elixir/Tests/Utils/: TestEnvironment.h
Shaders/: Basic.ps.hlsl  Basic.ps.spirv  Basic.vs.spirv  Debug.ps.hlsl  Debug.vs.spirv  FixedTriangle.ps.hlsl  FixedTriangle.ps.spirv  FixedTriangle.vs.hlsl  FixedTriangle.vs.spirv  GUI.ps.hlsl  GUI.ps.spirv  GUI.vs.spirv  GUIText.ps.spirv  GUI_Text.ps.spirv  GraphMaterial.ps.hlsl  GraphMaterial.vs.hlsl  Model.ps.hlsl  Model.vs.hlsl  PostProcess.ps.hlsl  PostProcess.vs.hlsl  Quad.hlsl  Scissor.hlsl  Shaders.cmake  Text.ps.spirv  Text.vs.spirv  Texture.ps.spirv
Shaders/Aether/: Bloom.ps.hlsl  Bloom.vs.hlsl  CloudComposite.ps.hlsl  CloudComposite.vs.hlsl  CloudResolve.ps.hlsl  CloudResolve.vs.hlsl  Clouds.ps.hlsl  Clouds.vs.hlsl  Common.hlsl  Fog.ps.hlsl  Fog.vs.hlsl  FroxelBuild.cs.hlsl  Mesh.ps.hlsl  Mesh.vs.hlsl  Particles.ps.glsl  Particles.ps.hlsl_  Particles.vs.glsl  Particles.vs.hlsl_  ParticlesScheduleBegin.cs.hlsl  ParticlesScheduleEmitters.cs.hlsl  ParticlesScheduleFinalize.cs.hlsl  ParticlesSchedulerBegin.cs.hlsl  ParticlesSchedulerCommon.hlsl  ParticlesSchedulerFinalize.cs.hlsl  ParticlesSchedulerInitEmitters.cs.hlsl  ParticlesSchedulerScheduleEmitters.cs.hlsl  ParticlesSpawn.cs.hlsl  ParticlesUpdate.cs.hlsl  Ribbon.ps.glsl  Ribbon.ps.glsl_  Ribbon.ps.hlsl  Ribbon.vs.glsl  Ribbon.vs.glsl_  Ribbon.vs.hlsl  Ribbon.vs.hlsl_.hlsl  Sprite.ps.glsl_  Sprite.ps.hlsl  Sprite.vs.glsl  Sprite.vs.hlsl  SpriteDistortion.ps.hlsl  (+2 more)
Shaders/Source/: Debug.vs.hlsl  FixedTriangle.ps.hlsl  FixedTriangle.vs.hlsl  FixedTriangle.vs.spirv  GUI.ps.hlsl  GUI.ps.spirv  GUI.vs.hlsl  GUI.vs.spirv  GUIText.ps.hlsl  GUI_Corners.ps.hlsl  SDF.hlsl  Text.ps.hlsl  Text.ps.spirv  Text.vs.hlsl  Text.vs.spirv  Texture.vs.hlsl
(+297 files in other folders)
